src/objects/inscor__Manifest_Line__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Business_Category__c</fullName>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Business_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__CSN__c</fullName>
        <label>CSN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__CSO__c</fullName>
        <description>Cycles since overhaul</description>
        <inlineHelpText>Cycles since last overhaul.</inlineHelpText>
        <label>CSO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Condition_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>Manifest Lines</relationshipLabel>
        <relationshipName>Manifest_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Cycle_Limit__c</fullName>
        <label>Cycle Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Cycles_Remaining__c</fullName>
        <label>Cycles Remaining</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__ESN__c</fullName>
        <label>ESN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>inscor__Inventory_Location__c</referenceTo>
        <relationshipLabel>Manifest Lines</relationshipLabel>
        <relationshipName>Manifest_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__MFR_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MFR Code</label>
        <referenceTo>inscor__Manufacturer_Code__c</referenceTo>
        <relationshipLabel>Manifest Lines</relationshipLabel>
        <relationshipName>Manifest_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Manifest__c</fullName>
        <label>Manifest</label>
        <referenceTo>inscor__Manifest__c</referenceTo>
        <relationshipLabel>Manifest Lines</relationshipLabel>
        <relationshipName>Manifest_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>inscor__Owner_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Code</label>
        <referenceTo>inscor__Owner_Code__c</referenceTo>
        <relationshipLabel>Manifest Lines</relationshipLabel>
        <relationshipName>Manifest_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Master</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Manifest Lines</relationshipLabel>
        <relationshipName>Manifest_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Price_Date__c</fullName>
        <label>Price Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Accepted__c</fullName>
        <label>Quantity Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Received__c</fullName>
        <label>Quantity Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Rejected__c</fullName>
        <label>Quantity Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Remaining__c</fullName>
        <formula>inscor__Quantity_on_Manifest__c - ( inscor__Quantity_Received__c + inscor__Quantity_Rejected__c + inscor__Quantity_Scrapped__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Scrapped__c</fullName>
        <label>Quantity Scrapped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_on_Manifest__c</fullName>
        <label>Quantity on Manifest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manifest Lines (Source)</relationshipLabel>
        <relationshipName>Manifest_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Sub_Location__c</fullName>
        <label>Sub Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__TSN__c</fullName>
        <label>TSN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__TSO__c</fullName>
        <description>Time since overhaul</description>
        <inlineHelpText>Time since last overhaul.</inlineHelpText>
        <label>TSO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Tag_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tag Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manifest Lines (Tag Agency)</relationshipLabel>
        <relationshipName>Manifest_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Tag_Date__c</fullName>
        <label>Tag Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Tag_Reference__c</fullName>
        <label>Tag Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Time_Limit__c</fullName>
        <label>Time Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Time_Remaining__c</fullName>
        <label>Time Remaining</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Trace__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trace</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manifest Lines</relationshipLabel>
        <relationshipName>Manifest_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Receipt</fullName>
                </value>
                <value>
                    <fullName>Manifest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>inscor__Warehouse__c</referenceTo>
        <relationshipLabel>Manifest Lines</relationshipLabel>
        <relationshipName>Manifest_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Manifest Line</label>
    <nameField>
        <displayFormat>MALID-{0}</displayFormat>
        <label>Manifest Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manifest Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>